--- a/css/style.css
+++ b/css/style.css
@@ -302,11 +302,11 @@ hr.small {
 
 /* Blur Effect */
 .image {
-   background: url('../img/bg-3-alt-blur.jpg') no-repeat center center;
+   background: url('../img/bg-3-alt.JPG') no-repeat center center;
 }
 
 .blurimage {
-   background: #1F1F1F url('../img/bg-3-alt.JPG') no-repeat center center;
+   background: #1F1F1F url('../img/bg-3-alt-blur.JPG') no-repeat center center;
 }
 
 .blurImg {
