--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,22 @@ article {
   z-index: 1;
 }
 
+.resume-download-button {
+  position: relative;
+  background: var(--border-gradient-onyx);
+  width: 30px;
+  height: 30px;
+  border-radius: 8px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  color: var(--orange-yellow-crayola);
+  box-shadow: var(--shadow-1);
+  z-index: 1;
+  margin-left: 8px;
+}
+
 .icon-box::before {
   content: "";
   position: absolute;
