--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -811,6 +811,12 @@ main {
   margin-bottom: 7px;
 }
 
+.timeline-item-subtitle {
+  font-size: var(--fs-8);
+  line-height: 1.3;
+  margin-bottom: 7px;
+}
+
 .timeline-list span {
   color: var(--vegas-gold);
   font-weight: var(--fw-400);
